<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:checkable="true"
    android:clickable="true"
    android:focusable="true"
    android:layout_margin="8dp"
    app:cardElevation="2dp"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">
        
        <ImageView
            android:id="@+id/image_pokemon"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="59dp"
            android:layout_height="59dp"
            android:scaleType="centerCrop"
            android:src="@drawable/pokebola"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/text_pokemon_image" />

        <TextView
            android:id="@+id/namePokemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:text="@string/text_name_def"
            app:layout_constraintStart_toStartOf="@id/image_pokemon"
            app:layout_constraintTop_toTopOf="@id/image_pokemon" />

        <TextView
            android:id="@+id/display_asterisk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text="@string/text_asterisk"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintStart_toStartOf="@+id/namePokemon"
            app:layout_constraintTop_toBottomOf="@id/namePokemon" />

        <TextView
            android:id="@+id/idPokemon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/string_id_def"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintStart_toStartOf="@+id/namePokemon"
            app:layout_constraintTop_toBottomOf="@id/namePokemon" />

        <ImageView
            android:id="@+id/fav_button"
            android:layout_marginStart="256dp"
            android:layout_marginTop="10dp"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/text_fav_button"
            android:src="@drawable/ic_baseline_favorite"
            app:layout_constraintStart_toStartOf="@id/image_pokemon"
            app:layout_constraintTop_toTopOf="@id/image_pokemon"/>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/image_pokemon"
            app:layout_constraintTop_toBottomOf="@id/image_pokemon">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/pokemon_types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_example_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_chip_one"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_example_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_chip_two"/>

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
